--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "jquery": "^2.2.1",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.1.2",
     "webpack": "^1.12.13"
   }
 }
